Pipeline/javax_xml_bind_annotation_adapters/javax_xml_bind_annotation_adaptersOutputResult.txt
Sample: HexBinaryAdapter_1
----------------------------------------------------------------
output:
./javax_xml_bind_annotation_adapters/javaFiles/HexBinaryAdapter_1.java:1: error: package javax.xml.bind.annotation.adapters does not exist
import javax.xml.bind.annotation.adapters.HexBinaryAdapter;
                                         ^
./javax_xml_bind_annotation_adapters/javaFiles/HexBinaryAdapter_1.java:5: error: cannot find symbol
        HexBinaryAdapter hexBinaryAdapter = new HexBinaryAdapter();
        ^
  symbol:   class HexBinaryAdapter
  location: class HexBinaryAdapter_1
./javax_xml_bind_annotation_adapters/javaFiles/HexBinaryAdapter_1.java:5: error: cannot find symbol
        HexBinaryAdapter hexBinaryAdapter = new HexBinaryAdapter();
                                                ^
  symbol:   class HexBinaryAdapter
  location: class HexBinaryAdapter_1
3 errors


================================================================

Sample: HexBinaryAdapter_2
----------------------------------------------------------------
output:
./javax_xml_bind_annotation_adapters/javaFiles/HexBinaryAdapter_2.java:1: error: package javax.xml.bind.annotation.adapters does not exist
import javax.xml.bind.annotation.adapters.HexBinaryAdapter;
                                         ^
./javax_xml_bind_annotation_adapters/javaFiles/HexBinaryAdapter_2.java:5: error: cannot find symbol
        HexBinaryAdapter hexBinaryAdapter = new HexBinaryAdapter();
        ^
  symbol:   class HexBinaryAdapter
  location: class HexBinaryAdapter_2
./javax_xml_bind_annotation_adapters/javaFiles/HexBinaryAdapter_2.java:5: error: cannot find symbol
        HexBinaryAdapter hexBinaryAdapter = new HexBinaryAdapter();
                                                ^
  symbol:   class HexBinaryAdapter
  location: class HexBinaryAdapter_2
3 errors


================================================================

